# seedfinding_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: libseedfinding.cmake  seedfinding.cmake
src/: CMakeLists.txt
